# melnode2

./: Cargo.toml
migrations/: 20250812195934_chain-metadata.sql
src/: main.rs  node.rs  rpc.rs  staker.rs  storage.rs
src/network/: gossip.rs  mod.rs
src/staker/: consensus-protocol.md  consensus.rs  consensus_state.rs  stake_net.rs
