[package]
name = "melnode2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bcs = "0.1.6"

clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"

mel2-stf = { path = "../mel2-stf" }
meshanina = "0.5.1"
novasmt = "0.3.0-alpha.3"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
smol = "2.0.2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-async-std"] }
tmelcrypt = "0.2.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
