[package]
name = "melnode2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arrayref = "0.3.9"
async-trait = "0.1.89"
bcs = "0.1.6"
bytes = { version = "1.10.1", features = ["serde"] }

clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1.0"
dirs = "6.0.0"
futures-util = "0.3.31"

mel2-stf = { path = "../mel2-stf" }
meshanina = "0.5.1"
nanorpc = "0.1.13"
novasmt = "0.3.0-alpha.3"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sillad = "0.2.6"
smol = "2.0.2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-async-std"] }
thiserror = "2.0.15"
tmelcrypt = "0.2.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
